# extractor

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/templates/: pull_request_template.md
.github/workflows/: test_runner.yaml
extractor/: cli.py
extractor/config/: reports.yaml  sources.yaml
extractor/connectors/: database.py  local.py  protocol.py  s3.py
extractor/converters/: protocol.py
extractor/converters/tabular/: pdf.py  xlsx.py
extractor/models/: common.py  jail_population.py  pregnant_inmate.py
extractor/scrapers/: protocol.py  tcjs.py  tcjs_archive.py
extractor/utils/: logger.py
tests/assets/immigrant_detained/raw/: ImmigrationDetainerReportCurrent.xlsx
tests/assets/jail_population/raw/: AbbreRptCurrent.xlsx
tests/assets/pregnant_inmate/raw/: PregnantFemaleReportingCurrent.xlsx
tests/unit/converters/: test_xlsx.py
