[tool.poetry]
name = "extractor"
version = "0.1.0"
description = "Scrape, process, and load reports from Texas AG & other sources."
authors = ["elaine ayo <projects@elaineayo.com>"]

############### PROJECT CLIs
[tool.poetry.scripts]
scrape = 'extractor.cli:main'

############### ADDITIONAL DEPENDENCY GROUPS
# optional dependency groups besides dev/base
[tool.poetry.group.analytics]
optional = true

[tool.poetry.group.ci]
optional = true

############### DEPENDENCY/BUILD INFORMATION

[tool.poetry.dependencies]
python = "^3.11"
click = "*"
python-dotenv = "^0.11.0"
sqlalchemy = "^1.3.18"
psycopg2-binary = "^2.8.6"
mashumaro = "^1.22"
requests = "^2.25.1"
pendulum = "*"
types-requests = "^2.26.0"
bs4 = "^0.0.1"
alembic = "^1.7.6"
pydantic = "*"
pandas = "^1.0.1"
s3fs = "^2022.8.2"
camelot-py = {version = "*", extras = ["cv"]}
sqlmodel = "*"


[tool.poetry.dev-dependencies]
coverage = "^5.3"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
black = {version = "22.12.0", allow-prereleases = true}
pre-commit = "^2.16.0"
mypy = "^0.930"
pylint = "2.5.3"

[tool.poetry.group.analytics.dependencies]
jupyter = "*"
notebook = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

############### OTHER TOOL CONFIGURATION
# configuration for other tools
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
    ]

[[tool.mypy.overrides]]
module = [
    "yaml",
    "pytz",
    "dateutil"
]
ignore_missing_imports = true

[tool.pycln]
all = true

[tool.black]
target_versions = ['py311']
